infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fiapx
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api-gateway
    app.kubernetes.io/part-of: fiapx
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: api
